<resources>
    <string name="app_name">Lab3Services</string>
    <string name="title_activity_sing_in">SingInActivity</string>
    <string name="btnSignInGoogle">Iniciar sesión con Google</string>
    <string name="btnAlreadyHaveAccount">Ya tienes cuenta? Inicia sesion</string>
    <string name="txtRegisterName">Nombre</string>
    <string name="txtRegistrate">¿No tienes cuenta? Regístrate</string>
    <string name="btnLogin">Sign in</string>
    <string name="txtUserName">Email</string>
    <string name="txtUserPassword">Contraseña</string>
    <string name="btnSignUp">Registrarse</string>
    <string name="btnMenuLogout">Cerrar sesion</string>
    <string name="btnMenuHelp">Ayuda</string>
    <string name="txtBikePartner">AUNT DAISY'S</string>
    <string name="title_activity_nd">NDActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    //Navigation drawer
    <string name="txtNDPlatos">Platos</string>
    <string name="txtNDBebidas">Bebidas</string>
    <string name="txtNDPerfil">Perfil</string>
    <string name="txtNDConfiguration">Configuración</string>
    <string name="txtNDLogOut">Cerrar sesión</string>
    <string name="txtNDAbout">Acerca de</string>

    //Plates and Drinks
    <string name="hintNombrePlato">Ingrese nombre del plato</string>
    <string name="checkBoxManana">Mañana</string>
    <string name="checkBoxTarde">Tarde</string>
    <string name="checkBoxNoche">Noche</string>
    <string name="labelTipoPlato">Tipo de plato</string>
    <string name="radioBtnEntrada">Entrada</string>
    <string name="radioBtnPlatoFuerte">Plato fuerte</string>
    <string name="labelPrecio">Precio</string>
    <string name="hintPrecio">0</string>
    <string name="hintIngredientes">Ingrese ingredientes ej: papa, huevo</string>
    <string name="btnAgregarPlato">Agregar</string>
    <string name="txtTiempoPlato">Tiempo de Preparación</string>
    <string name="txtIngredientes">Ingredientes</string>
    <string name="hintNombreBebida">Ingrese nombre de la bebida</string>
    <string name="labelPrecioBebida">Precio</string>
    <string name="btnAgregarBebida">Agregar</string>
    <string name="btnRegristrarPlato">Añadir Plato</string>
    <string name="btnRegistrarBebida">Añadir Bebida</string>
    <string name="itemMenuBorrar">Borrrar</string>
    <string name="itemMenuSalir">Salir</string>

    //Profile
    <string name="titleProfile">Mi Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
