<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="lab3.gr02_20181.compumovil.udea.edu.co.lab3services.AddPlatesFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/imgPlato"
            android:layout_width="20dp"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:src="@drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/btnAgregarImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorAccent"
            android:drawableBottom="@drawable/ic_menu_camera"
            android:onClick="photoGallery"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="60dp" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtNombrePlato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintNombrePlato"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxManana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkBoxManana" />

            <CheckBox
                android:id="@+id/checkBoxTarde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkBoxTarde" />

            <CheckBox
                android:id="@+id/checkBoxNoche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkBoxNoche" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTipoPlato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/labelTipoPlato"
                android:textColor="@color/colorBlack"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioBtnEntrada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioBtnEntrada" />

                <RadioButton
                    android:id="@+id/radioBtnPlatoFuerte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioBtnPlatoFuerte" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelPrecio"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/txtPrecioPlato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:hint="@string/hintPrecio"
                android:inputType="number" />

            <Button
                android:id="@+id/btnTiempoPlato"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:backgroundTint="@color/colorAccent"
                android:drawableBottom="@android:drawable/ic_lock_idle_alarm"
                android:onClick="onClick" />

            <TextView
                android:id="@+id/txtTiempoPlato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <EditText
                android:id="@+id/txtIngredientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="13"
                android:hint="@string/hintIngredientes"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnAgregarPlato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:onClick="onClick"
                android:text="@string/btnAgregarPlato" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>

    </LinearLayout>

</FrameLayout>
