<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lab3.gr02_20181.compumovil.udea.edu.co.lab3services.AddDrinksFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:layout_weight="0">

            <ImageView
                android:id="@+id/imgBebida"
                android:layout_width="80dp"
                android:layout_height="150dp"
                android:layout_weight="1" />

            <!--<Button
                android:id="@+id/btnAgregarImgBebida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorAccent"
                android:drawableStart="@drawable/ic_menu_camera"
                android:onClick="photoGallery"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="60dp" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/txtNombreBebida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/hintNombreBebida"
                android:inputType="textPersonName" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelPrecioBebida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelPrecioBebida"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/txtPrecioBebida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:hint="@string/hintPrecio"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/txtIngredientesBebida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="13"
                android:hint="@string/hintIngredientes"
                android:inputType="textPersonName" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAgregarBebida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:onClick="onClick"
                android:text="@string/btnAgregarPlato" />


        </LinearLayout>
    </LinearLayout>

</FrameLayout>
